src/objects/RelocationSecondment__c.object
<CustomObject>
    <fields>
        <fullName>EstimatedCost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomeLocation__c</fullName>
        <label>Home Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Relocations / Secondments</relationshipLabel>
        <relationshipName>RelocationsSecondments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SecondmentLocation__c</fullName>
        <label>Secondment Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relocation / Secondment</label>
    <nameField>
        <displayFormat>RS-{0000000000}</displayFormat>
        <label>Relocation / Secondment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relocations / Secondments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>